<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_produk"
            android:icon="@drawable/ic_spa_black_24dp"
            android:title="@string/menu_produk" />
        <item
            android:id="@+id/nav_keranjang"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_keranjang" />
        <item
            android:id="@+id/nav_pembelian"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:title="@string/menu_pembelian" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_uploadfoto"
            android:icon="@drawable/uploadfoto_icon"
            android:title="@string/menu_uploadfoto"
            android:visible="false"/>
        <item
            android:id="@+id/nav_fotoprofil"
            android:icon="@drawable/uploadfoto_icon"
            android:title="@string/menu_fotoprofil"
            android:visible="true"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"
            android:visible="true"/>
    </group>

    <item
        android:id="@+id/item_auth"
        android:title="Authentication"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_daftar"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/menu_daftar" />
        </menu>
    </item>

</menu>
