<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="158dp"
            android:layout_height="172dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_below="@id/nama_produk"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/foto"
            android:layout_toRightOf="@id/foto"
            android:scaleType="fitXY"
            android:src="@drawable/yellow" />


        <TextView
            android:id="@+id/tgl_upload"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nama_produk"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/rating"
            android:layout_toRightOf="@id/foto"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="@string/tgl_upload" />


        <TextView
            android:id="@+id/kode_produk"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nama_produk"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="156dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/tgl_upload"
            android:layout_toRightOf="@id/foto"
            android:gravity="center"
            android:textSize="6sp"
            android:textStyle="italic"
            android:visibility="invisible"
            tools:text="12" />

        <TextView
            android:id="@+id/nama_produk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/foto"
            android:layout_toRightOf="@id/foto"
            android:gravity="center"
            android:maxLines="2"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/nama_produk" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/nama_produk"
            android:layout_marginStart="59dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/foto"
            android:layout_toRightOf="@id/foto"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:text="@string/ratingnya" />

        <TextView
            android:id="@+id/jenis"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tgl_upload"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/foto"
            android:layout_toRightOf="@id/foto"
            android:text="@string/jenis"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tgl_upload"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/jenis"
            android:ellipsize="end"
            android:textSize="12dp"
            tools:text="@string/sold" />

        <TextView
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tgl_upload"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/poster3"
            android:ellipsize="end"
            android:text="terjual"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jenis"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/foto"
            android:layout_toRightOf="@id/foto"
            android:ellipsize="end"
            android:gravity="center"
            android:textColor="#b5961b"
            android:textSize="14dp"
            android:textStyle="bold"
            tools:text="@string/harga" />

        <ImageView
            android:id="@+id/poster3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tgl_upload"
            android:layout_marginStart="1dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/sold"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_people_black_24dp" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/harga"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/foto"
            android:layout_toRightOf="@id/foto"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12dp"
            tools:text="@string/deskripsi" />

    </RelativeLayout>

</android.support.v7.widget.CardView>