<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cordlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/fotodet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@mipmap/ic_launcher" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="true"
                android:orientation="vertical"
                tools:context="com.andyadr.apps.moviecatalogues.activity.DetailActivity">


                <ImageView
                    android:id="@+id/fotodet2"
                    android:layout_width="130dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="TODO"
                    android:elevation="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/nama_produkdet"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/fotodet2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_1"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="#97103B"
                    android:gravity="center"
                    android:text="@string/nama_produk"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/fotodet2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/fotodet2"
                    app:layout_constraintTop_toTopOf="@+id/fotodet2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="225dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#97103B"
                    android:text="@string/harga"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/fotodet2"
                    app:layout_constraintTop_toBottomOf="@+id/nama_produkdet" />

                <TextView
                    android:id="@+id/hargadet"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/tv_2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/fotodet2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_2"
                    tools:text="0" />

                <ImageView
                    android:id="@+id/poster2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toEndOf="@+id/fotodet2"
                    app:layout_constraintTop_toBottomOf="@+id/hargadet"
                    app:srcCompat="@drawable/ic_star_half_black_24dp" />

                <ImageView
                    android:id="@+id/poster3"
                    android:layout_width="15dp"
                    android:layout_height="13dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/solddet"
                    app:layout_constraintStart_toEndOf="@+id/solddet"
                    app:layout_constraintTop_toTopOf="@+id/solddet"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_people_black_24dp" />

                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/ratingdet"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="180dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/poster2"
                    app:layout_constraintTop_toBottomOf="@+id/hargadet"
                    tools:text="@string/ratingnya" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="34dp"
                    android:layout_height="13dp"
                    android:text=" terjual"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/poster3"
                    app:layout_constraintStart_toEndOf="@+id/poster3"
                    app:layout_constraintTop_toTopOf="@+id/poster3"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/solddet"
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:textSize="10dp"
                    app:layout_constraintStart_toEndOf="@+id/fotodet2"
                    app:layout_constraintTop_toBottomOf="@+id/poster2"
                    tools:text="0" />

                <TextView
                    android:id="@+id/jenisdet"
                    android:layout_width="131dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="@+id/fotodet2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fotodet2"
                    tools:text="@string/jenis" />

                <TextView
                    android:id="@+id/tgl_uploaddet"
                    android:layout_width="75dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:textSize="12dp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/popularity"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/popularity"
                    app:layout_constraintTop_toTopOf="@+id/popularity"
                    tools:text="@string/tgl_upload" />

                <TextView
                    android:id="@+id/kode_produkdet"
                    android:layout_width="40dp"
                    android:layout_height="16dp"
                    android:gravity="center"
                    android:textSize="6dp"
                    android:textStyle="italic"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/tgl_uploaddet"
                    app:layout_constraintEnd_toEndOf="@+id/hargadet"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tgl_uploaddet"
                    app:layout_constraintTop_toTopOf="@+id/tgl_uploaddet"
                    tools:text="12" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#97103B"
                    android:gravity="center"
                    android:text="@string/deskripsi"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/fotodet2"
                    app:layout_constraintTop_toBottomOf="@+id/popularity" />

                <TextView
                    android:id="@+id/deskripsidet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    tools:text="@string/Deskripsi" />


                <FrameLayout
                    android:id="@+id/frame_container"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deskripsidet" />


            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:theme="@style/BottomNavigationTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cordlay"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/navigation_bottom_menu" />
</android.support.constraint.ConstraintLayout>